# poc

actor/: Cargo.toml  rust-toolchain.toml
actor/src/: main.rs
actor/src/actor/: actor_service.rs  mod.rs  udp.rs
e2ee/: Cargo.toml
ffmpeg/: build-ffmpeg.sh
ffmpeg/poc_rust_ffmpeg/: Cargo.toml  setenv.sh
ffmpeg/poc_rust_ffmpeg/src/: main.rs  poc_cut_off.rs  poc_gen_sdp.rs
h264-to-image/: Cargo.toml
h264-to-image/src/: h264_annexb.rs  main.rs  poc_ffmpeg.rs  util.rs  yuv.rs
mediasoup_poc/: Cargo.toml
mediasoup_poc/examples/: videoroom.rs
mediasoup_poc/src/: cmd_server.rs  init.rs  main.rs
mswitch/: Cargo.toml
multi-channels/: Cargo.toml
multi-channels/src/: bench_mpsc.rs  ch_common.rs  impl01.rs  impl02.rs  impl51.rs  impl_test.rs  main.rs  poc_async_broadcast.rs  poc_futures.rs  test_impl.rs  test_mpsc.rs
multi-channels/src/async_call/: async_call.rs  async_fn.rs  mod.rs
multi-channels/src/ch_common/: ch_common.rs  ch_queue.rs  mod.rs  uid.rs  vec_map.rs
multi-channels/src/ch_hub/: event.rs  hub.rs  mod.rs  store.rs
multi-channels/src/ch_hub/channel1/: bus.rs  channel.rs  cursors.rs  mod.rs  suber.rs  test.rs
multi-channels/src/cli_graph/: bars.rs  format.rs  mod.rs
multi-channels/src/impl01/: impl01.rs  mod.rs
multi-channels/src/impl02/: impl02.rs  mod.rs  mpsc_async_channel.rs  mpsc_crossbeam_que.rs  mpsc_flume.rs  mpsc_kanal.rs  mpsc_tokio_broadcast.rs  mpsc_tokio_mpsc.rs
multi-channels/src/impl51/: mod.rs
multi-channels/src/mpsc_ch/: bench_mpsc.rs  mod.rs  mpsc_async_broadcast.rs  mpsc_async_channel.rs  mpsc_concurrent_que.rs  mpsc_crossbeam_que.rs  mpsc_defs.rs  mpsc_flume.rs  mpsc_kanal.rs  mpsc_tokio_broadcast.rs  mpsc_tokio_mpsc.rs  test_mpsc.rs
poc_audio/: Cargo.toml
poc_audio/src/: main.rs
poc_oddity-rtsp/: Cargo.toml  protocol_examle.txt
poc_oddity-rtsp/src/: cmd_server.rs  init.rs  main.rs
poc_oddity-rtsp/src/oddity_rtsp_server/: mod.rs
poc_oddity-rtsp/src/oddity_rtsp_server/app/: config.rs  handler.rs  mod.rs
poc_oddity-rtsp/src/oddity_rtsp_server/media/: sdp.rs
poc_oddity-rtsp/src/oddity_rtsp_server/media/video/: reader.rs
poc_oddity-rtsp/src/oddity_rtsp_server/net/: connection.rs  connection_manager.rs  handler.rs  server.rs
poc_oddity-rtsp/src/oddity_rtsp_server/session/: mod.rs  session_manager.rs  setup.rs
poc_oddity-rtsp/src/oddity_rtsp_server/source/: mod.rs  source_manager.rs
poc_oddity-rtsp/src/simple_rtsp_server/: demo.rs  mem_source.rs  mod.rs  rtp_mem.rs  simple_rtsp_server.rs
poc_video_rs/: Cargo.toml
poc_video_rs/src/: main.rs  poc_encode_mp4.rs
srtp-decoder/: Cargo.toml
srtp-decoder/data/: mini.pcap
srtp-decoder/src/: hex.rs  main.rs
udp-multicast/: Cargo.toml
udp-multicast/src/: main.rs
