[package]
name = "actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
# thinnbox = "0.1.2"
tokio = { version = "=1.18.0", features = ["full"] }
tokio-util = {version = "=0.7.1", features = ["full"]}
tokio-stream = { version = "=0.1.8", features = ["sync"] }
tokio-rustls = "=0.23.3"

futures="=0.3.15"
anyhow = "=1.0.66"
bytes = "=1.1.0"

tracing = { version = "=0.1.26", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = "=0.2.23" 
tracing-appender = "=0.1.2"

async-trait = "=0.1.53"
