[package]
name = "mediasoup_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mediasoup = "=0.15.0"

clap = { version = "=4.1.6", features = ["derive", "env"] }


tokio = { version = "=1.35.1", features = ["full"] }
tokio-util = {version = "=0.7.10", features = ["full"]}

tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "=0.3.17", features = ["local-time", "env-filter"]}
tracing-appender = "=0.2.2"
time = {version = "=0.3.21", features = ["formatting", "macros"]}

futures="=0.3.28"
anyhow = "=1.0.71"
bytes = "=1.1.0"
parking_lot = "=0.11.2"

axum = {version = "=0.6.20", features = ["ws"]}
axum-server = { version = "=0.5.1", features = ["tls-rustls"] }

serde = { version = "=1.0.195", features = ["derive", "serde_derive"] }
serde_json = "=1.0.111"



# rtp-rs = "=0.6.0"
# webrtc = "=0.9.0"
# byteorder = "=1.5.0" # 为了测试 IVFFileHeader

# [dev-dependencies]
# actix = "=0.13.1"
# actix-web-actors = "=4.2.0"

[dev-dependencies]
actix = "0.13.0"
actix-web-actors = "4.1.0"
async-io = "1.10.0"
criterion = "0.4.0"
env_logger = "0.9.1"
portpicker = "0.1.1"

event-listener-primitives = "=2.0.1"
uuid = { version = "=1.4.1", features = ["serde", "v4"] }
async-lock = "=2.8.0"
futures-lite = "=1.13.0"

[dev-dependencies.actix-web]
default-features = false
features = ["macros"]
version = "4.2.1"




