[package]
name = "multi-channels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.18.0", features = ["full"] }
tokio-util = {version = "=0.7.1", features = ["full"]}
tokio-stream = { version = "=0.1.8", features = ["sync"] }
futures = "0.3.25"
anyhow = "=1.0.66"
async-broadcast = "0.5.0"
async-channel = "1.8.0"
parking_lot = "=0.11.2"
lazy_static = "^1.4.0"
indexmap = "1.9.2"
crossbeam = "0.8.2"
kanal = "0.1.0-pre8"
# lowcharts = "0.5.8"
yansi = "0.5.1" 
console = "0.15.5"

