[package]
name = "poc_oddity-rtsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# oddity-rtsp-server = { path = "oddity-rtsp-server" }
oddity-rtsp-protocol = { path = "/Users/simon/simon/src/study/oddity-rtsp/oddity-rtsp-protocol", features = ["tokio-codec"] }
oddity-sdp-protocol = { path = "/Users/simon/simon/src/study/oddity-rtsp/oddity-sdp-protocol" }
video-rs = { version = "=0.5.0" }


clap = { version = "=4.1.6", features = ["derive", "env"] }


tokio = { version = "=1.35.1", features = ["full"] }
tokio-util = {version = "=0.7.10", features = ["full"]}

tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = {version = "=0.3.17", features = ["local-time", "env-filter"]}
tracing-appender = "=0.2.2"
time = {version = "=0.3.21", features = ["formatting", "macros"]}

futures="=0.3.28"
anyhow = "=1.0.71"
bytes = "=1.1.0"
parking_lot = "=0.11.2"


serde = {version = "=1.0.164", features = ["derive", "rc"]}
serde_derive = "=1.0.164"
serde_json = "=1.0.65"
config = { version = "=0.13.4", default-features = false, features = ["yaml"] }

tokio-stream = { version = "0.1" }
rand = "0.8"
