[package]
name = "srtp-decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
pretty-hex = "0.3.0"
srtp = "0.7.0"

pcap-parser = "0.14.0"

pcap-file = "2.0.0"
etherparse = "0.13.0"
