[package]
name = "udp-multicast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "=1.18.0", features = ["full"] }
tokio-util = {version = "=0.7.1", features = ["full"]}
tokio-stream = { version = "=0.1.8", features = ["sync"] }
tokio-rustls = "=0.23.3"

futures="=0.3.15"
anyhow = "=1.0.66"
bytes = "=1.1.0"

tracing = { version = "=0.1.26", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = "=0.2.23" 
tracing-appender = "=0.1.2"

socket2 = "0.4.4"

# async-trait = "=0.1.53"
# serde = "=1.0.126"
# serde_derive = "=1.0.126"
# serde_json = "=1.0.65"
# lazy_static = "=1.4.0"
# url = "=2.2.2"
# thiserror = "=1.0.30"


# hyper = { version = "=0.14.16", features = ["full"] }




# flvparse = "=0.1.0"
# prettytable-rs = "=0.8"
# nom = { version = "=6.1", default-features = false }



# webpki-roots = "=0.22"

# bitvec = "=0.20.0"
# funty = "=1.1.0"
# pretty-hex = "=0.2.1"
# mpeg2ts-reader = "=0.15.0"
# enumflags2 = "=0.7.1"




# # log = "=0.4.14"
# # xmpegts = "=0.0.3" # remove it 
# xmpegts = {path = "../third/xmpegts"}
# ansi_term= "=0.12.1"
# parking_lot = "=0.11.2"



# tokio-retry = "=0.3.0"
# built = "=0.5.1"
# once_cell = "=1.8.0"
# # srt-tokio = {git="https://github.com/russelltg/srt-rs.git"}
# srt-tokio = {git="https://gitee.com/simon-fu/srt-rs.git", rev = "3e7a29cc"}
# # srt-tokio = {git="https://gitee.com/simon-fu/srt-rs.git", rev = "6fadb427" }


# # retina = "=0.4.0"
# retina = {git="https://github.com/simon-fu/retina.git", rev = "b1004cd0"}

# chrono = "=0.4.19"



# # hevc_parser = "=0.5.2"
# bitvec_helpers = "=2.0.0"
# array-init = "=2.0.1"
# tinyvec = {version = "=1.6.0", features = ["alloc"]}

# # fdk-aac = "=0.4.0"
# fdk-aac-sys = { version = "=0.4.0" }
# symphonia = "=0.5.1"

# openh264 = "=0.3.1"
# image = "=0.24.5"
# h264-reader = "=0.6.0"
